# FinalYearProject

./: .clang-format  .gitignore  CMakeLists.txt
src/: App.cpp  App.h  AssetData.h  CMakeLists.txt  Camera.cpp  Camera.h  Level.cpp  Level.h  SharedContext.h  TextureData.h  ThingsToDo.txt  Types.h  main.cpp
src/animations/: AnimatedSprite.cpp  AnimatedSprite.h  AnimationStates.h
src/entities/: BaseEntity.h  Bullet.cpp  Bullet.h  Cheerleader.cpp  Cheerleader.h  Civilian.cpp  Civilian.h  Entity.h  EntityData.h  EntityTypes.h  Mummy.cpp  Mummy.h  Player.cpp  Player.h  Soldier.cpp  Soldier.h  Zombie.cpp  Zombie.h
src/input/: InputType.h  Keyboard.cpp  Keyboard.h
src/inputs/: Keyboard.cpp  Keyboard.h
src/managers/: AudioManager.cpp  AudioManager.h  CollisionManager.h  EntityManager.cpp  EntityManager.h  ResourceManager.h  SceneManager.cpp  SceneManager.h
src/scenes/: BaseScene.cpp  BaseScene.h  ControlsScene.cpp  ControlsScene.h  GameScene.cpp  GameScene.h  GameoverScene.cpp  GameoverScene.h  OptionScene.cpp  OptionsScene.cpp  OptionsScene.h  PauseScene.cpp  PauseScene.h  SceneTypes.h  TestScene.cpp  TestScene.h  TitleScene.cpp  TitleScene.h
src/utils/: RectUtils.h  RectangleHelper.h  Singleton.h
test/: CMakeLists.txt  Utils.cpp  catch.hpp
